# insight-ui-webgl

./: .gitignore  README.md  manage.py  pyproject.toml
demo/: settings.py
demo/templates/: demo.html
docs/: component-architecture.md  implementation-plan.md  multi-viewport-architecture.md
examples/standalone/: README.md  pyproject.toml  settings.py  urls.py
examples/standalone/events/: models.py  views.py
examples/standalone/events/management/commands/: consume_kafka.py
examples/standalone/events/migrations/: 0001_initial.py
examples/standalone/templates/: demo.html
examples/with-insight-ui/: README.md  context_processors.py  manage.py  pyproject.toml  settings.py  urls.py
examples/with-insight-ui/templates/: demo_with_insight_ui.html
insight_ui_webgl/: __init__.py  apps.py
insight_ui_webgl/static/insight_ui_webgl/js/: insight-webgl-axis.js  insight-webgl-data-badge.js  insight-webgl-data-item.js  insight-webgl-entity-legend.js  insight-webgl-event-queue.js  insight-webgl-event-registry.js  insight-webgl-grid.js  insight-webgl-init.js  insight-webgl-layer-controls.js  insight-webgl-overlay-link.js  insight-webgl-overlay-text.js  insight-webgl-playback-controls.js  insight-webgl-sse-transport.js  insight-webgl-stream-status.js  insight-webgl-streaming-chart.js  insight-webgl-threshold-plane.js  insight-webgl-utils.js  insight-webgl-viewport.js  insight-webgl-ws-transport.js
insight_ui_webgl/templates/insight_ui_webgl/components/: axis.html  data_badge.html  data_item.html  entity_legend.html  event_queue.html  event_registry.html  grid.html  layer_controls.html  overlay_link.html  overlay_text.html  playback_controls.html  sse_transport.html  stream_status.html  streaming_chart.html  threshold_plane.html  viewport.html  ws_transport.html
insight_ui_webgl/templatetags/: insight_webgl_tags.py
tests/: settings.py  test_template_tags.py
