[project]
name = "insight-ui-webgl-example-standalone"
version = "0.1.0"
description = "Example: insight-ui-webgl standalone with Kafka live data."
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "insight-ui-webgl",
    "confluent-kafka>=2.6",
]

[tool.uv.sources]
insight-ui-webgl = { path = "../..", editable = true }
